Add `alt` attribute to images

--- a/logo/tut-02.html
+++ b/logo/tut-02.html
@@ -3,7 +3,7 @@
 
 <p><a href="./tut-01.html">← 安装及使用</a> | <a href="./index.html">⇑ 首页</a> | <a href="./tut-03.html">界面及功能介绍 →</a></p>
 <p>LOGO画板的界面如下图所示：</p>
-<img src="./images/interface.png"/>
+<img src="./images/interface.png" alt="&#x754C;&#x9762;"/>
 <p>以下对界面中的各主要部分进行详细说明：</p>
 <dl>
 
