--- a/logo/tut-07.html
+++ b/logo/tut-07.html
@@ -5,14 +5,14 @@
 <p>以下列举一些实例，供参考。</p>
 <section>
 <h2>五角星</h2>
-<img src="./images/star.png"/>
+<img src="./images/star.png" alt="&#x4E94;&#x89D2;&#x661F;"/>
 </section>
 <section>
 <h2>空心五角星</h2>
-<img src="./images/hollow-star.png"/>
+<img src="./images/hollow-star.png" alt="&#x7A7A;&#x5FC3;&#x4E94;&#x89D2;&#x661F;"/>
 </section>
 <section>
 <h2>螺旋</h2>
-<img src="./images/spire.png"/>
+<img src="./images/spire.png" alt="&#x87BA;&#x65CB;"/>
 </section>
 </article><footer><p>Copyright © 2007–2017 Xin Wang</p></footer></body></html>
