--- a/logo/tut-03.html
+++ b/logo/tut-03.html
@@ -17,19 +17,19 @@
 结束</code></pre>
 <p>另外 <code>右转</code> 和 <code>前进</code> 动作的参数可以为负数，所以 <code>左转</code> 和 <code>后退</code> 可以以更为简洁的方式定义，比如 <code>右转 -90</code> 就表示向左转90度，而比如 <code>前进 -10</code> 表示后退10个像素。</p>
 <p>下面我们利用这两个动作在LOGO画板中绘制一个等边三角形。将界面右侧的“前进”和“右转”拖放到动作区的蓝框中。单击其中的数字，可以设定具体的参数。比如先前进100像素，再右转120度，再重复上面的动作。最终如下图所示：</p>
-<img src="./images/forward-and-right.png"/>
+<img src="./images/forward-and-right.png" alt="&#x524D;&#x8FDB;&#x548C;&#x53F3;&#x8F6C;"/>
 <p>单击控制区中的“开始”按钮，画笔将在绘图区绘制一个等边三角形。</p>
 </section>
 <section>
 <h2>抬笔和下笔</h2>
 <p>在默认情况下，<code>前进</code> 动作会在界面中绘制线条，但如果只是想移动画笔，这时就需要结合使用 <code>抬笔</code> 和 <code>下笔</code> 这两个动作了。<code>抬笔</code> 将使得画笔被收起，之后所有的 <code>前进</code> 动作都不会在界面中绘制，而 <code>下笔</code> 则是执行相反的动作。下面是一个示例，绘制两条平行线。</p>
-<img src="./images/penup-and-pendown.png"/>
+<img src="./images/penup-and-pendown.png" alt="&#x62AC;&#x7B14;&#x548C;&#x4E0B;&#x7B14;"/>
 </section>
 <section>
 <h2>重复动作</h2>
 <p><code>重复</code> 很容易理解，就是用来重复执行一个或多个动作。将其拖放到控制区之后，需要对其设置两个参数，一是需要重复的动作，二是重复的次数。如下示例就是通过它绘制一个圆：</p>
-<img src="./images/repeat.png"/>
+<img src="./images/repeat.png" alt="&#x91CD;&#x590D;&#x52A8;&#x4F5C;"/>
 <p>结合 <code>抬笔</code> 和 <code>下笔</code>，还可以绘制更为复杂的图形，如下图所示：</p>
-<img src="./images/repeat-2.png"/>
+<img src="./images/repeat-2.png" alt="&#x91CD;&#x590D;&#x52A8;&#x4F5C;"/>
 </section>
 </article><footer><p>Copyright © 2007–2017 Xin Wang</p></footer></body></html>
