--- a/logo/tut-04.html
+++ b/logo/tut-04.html
@@ -3,11 +3,11 @@
 
 <p><a href="./tut-03.html">← 基本词汇说明</a> | <a href="./index.html">⇑ 首页</a> | <a href="./tut-05.html">自定义词汇 →</a></p>
 <p>控制区初始状态如下图所示：</p>
-<img src="./images/controller-1.png"/>
+<img src="./images/controller-1.png" alt="&#x63A7;&#x5236;&#x533A;1"/>
 <p>其中包括速度设置，以及“开始”和“单步”按钮。</p>
 <p>点击开始按钮后程序将会自动执行动作区指定的动作，此时控制区如下所示：</p>
-<img src="./images/controller-2.png"/>
+<img src="./images/controller-2.png" alt="&#x63A7;&#x5236;&#x533A;2"/>
 <p>单步按钮则会在执行其中的一个动作之后暂停，在点击单步按钮后控制区如下图所示：</p>
-<img src="./images/controller-3.png"/>
+<img src="./images/controller-3.png" alt="&#x63A7;&#x5236;&#x533A;3"/>
 <p>在自动执行时也可以点击控制区的“暂停”按钮转为单步执行。</p>
 </article><footer><p>Copyright © 2007–2017 Xin Wang</p></footer></body></html>
