--- a/logo/tut-05.html
+++ b/logo/tut-05.html
@@ -7,12 +7,12 @@
 <p>前面介绍的都是LOGO画板中自带的动作，在LOGO画板中还可以通过“定义”功能定义新的动作，比如前面提到的 <code>左转</code> 、<code>后退</code> 等。</p>
 <p>回想一下前面对等边三角形的绘制，我们可以定义一个 <code>等边三角形</code> 动作，通过它可以绘制任意边长的等边三角形。</p>
 <p>首先点击界面中的“定义”，在对话框中输入 <code>等边三角形 边长</code> ，表示需要定义一个 <code>等边三角形</code> 动作，它有一个参数，参数名为 <code>边长</code> ，再点击确定。界面中将出现一个等边三角形的空定义。之后就可以将动作拖放到它的动作区来定义具体的动作。其中参数可以通过拖动定义中的参数名获得。最终形式如下图所示：</p>
-<img src="./images/to.png"/>
+<img src="./images/to.png" alt="&#x5B9A;&#x4E49;&#x52A8;&#x4F5C;"/>
 </section>
 <section>
 <h2>判断</h2>
 <p>接下来介绍最后一个基本动作 <code>是否</code>，<code>是否</code> 动作有三个参数，包括：判断语句、在判断语句为真执行的动作、判断语句为假时执行的动作。</p>
 <p>如下图所示例子，只有在边长小于100时才会继续执行 <code>三角形排列</code> 动作。</p>
-<img src="./images/ifelse.png"/>
+<img src="./images/ifelse.png" alt="&#x662F;&#x5426;&#x52A8;&#x4F5C;"/>
 </section>
 </article><footer><p>Copyright © 2007–2017 Xin Wang</p></footer></body></html>
